src/index.css
body {
    margin: 0px;
    overflow-x: hidden;
    overflow-y: hidden; 
}

.main {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
}

.header {
    position: absolute;
    top: 2px;
    left: 0px;
    opacity: 1;
    z-index: 10;
    width: 100%;
    height: 20px;
    -webkit-app-region: drag;
}

.line {
    width: 100%;
    height: 50%;
    display: flex;
    flex: 1;
    justify-content: flex-start;
    flex-direction: row;
}

.videoContainer {
    width: 100%;
    height: 100%;
    flex: 1;
}

.openFile {
    font-size: 16px;
    width: 100px;
    color: white;
    background-color: #666666;
    margin: 20px;
}

.openFile:hover {
    background-color: #45b005;
}

.application {
    position: relative;
    flex:1;
}

.dropArea {
    color: white;
    background-color: #444444;
    width: 300px;
    height: 160px;
    position: absolute; margin: auto; top: 0px; bottom: 0px; left: 0px; right: 0px;
    transition: opacity 500ms ease-out,
        background-color 300ms;
    -webkit-app-region: no-drag;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    justify-content: center;
    align-items: center;
}

.dropZone {
    font-size: 16px;
    width: 100%;
    text-align: center;
}

.dropArea.droppableArea {
    background: #45b005;
}

.player {
    background: rgb(0,0,0);
    height: 100%;
    width: 100%;
}

.errMsg {
    width: 200px;
    background-color: yellow;
}

.hide {
    display: none;
}

.window_btns {
    position: absolute;
    top: 2px;
    right: 2px;
    display: flex;
    justify-content: flex-start;
    flex-direction: row;
}
.min_btn {
    width: 20px;
    height: 20px;
    margin-right: 5px;
    background-image: url("./png/min.png");
}
.min_btn:hover {
    background-position: -20px 0px;
}
.max_btn {
    width: 20px;
    height: 20px;
    margin-right: 5px;
    background-image: url("./png/max.png");
}
.max_btn:hover {
    background-position: -20px 0px;
}
.close_btn {
    width: 20px;
    height: 20px;
    margin-right: 5px;
    background-image: url("./png/close.png");
}
.close_btn:hover {
    background-position: -20px 0px;
}

